updated about section and change navigation background color

--- a/css/style.css
+++ b/css/style.css
@@ -957,7 +957,7 @@ body {
     }
 
     .nav {
-        background: var(--color-primary);
+        background: var(--color-dark-grey);
     }
     
     .nav .btn-primary {
